# Xarm_haptics

./: CMakeLists.txt
config/: joint_limits.yaml
launch/: moveit.rviz  xarm7_moveit_gazebo.launch
scripts/: hapkit_1.cpp  hapkit_ros.cpp  output.txt  pickandplace_waypoint.cpp  publishpose.cpp
